GNOME Bugzilla – Bug 687896
bufferpool: deadlock in GstBufferPool
Last modified: 2012-11-20 23:11:06 UTC
Running any element that creates and sets a bufferpool config deadlocks in _set_config() because _get_config() unlocks the mutex twice.
Created attachment 228435 [details] [review] bufferpool: lock before unlock
commit 718b6b2471cb10ddceadd07a001064e546808d00 Author: Matthew Waters <ystreet00@gmail.com> Date: Thu Nov 8 15:33:01 2012 +1100 bufferpool: lock before unlock in _get_config Fixes deadlock on Windows Fixes https://bugzilla.gnome.org/show_bug.cgi?id=687896