bufferpool: lock before unlock in _get_config

Fixes deadlock on Windows

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=687896